--- a/k8s.yaml
+++ b/k8s.yaml
@@ -4,39 +4,39 @@ metadata:
   annotations:
     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
   labels:
-    io.kompose.service: spring-boot-template-project
-  name: spring-boot-template-project
+    io.kompose.service: fint-customer-gateway
+  name: fint-customer-gateway
 spec:
   ports:
     - name: "8080"
       port: 8080
   type: LoadBalancer
   selector:
-    io.kompose.service: spring-boot-template-project
+    io.kompose.service: fint-customer-gateway
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
   labels:
-    io.kompose.service: spring-boot-template-project
-  name: spring-boot-template-project
+    io.kompose.service: fint-customer-gateway
+  name: fint-customer-gateway
 spec:
   replicas: 1
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      io.kompose.service: spring-boot-template-project
+      io.kompose.service: fint-customer-gateway
   template:
     metadata:
       labels:
-        io.kompose.service: spring-boot-template-project
+        io.kompose.service: fint-customer-gateway
     spec:
       restartPolicy: Always
       containers:
-        - image: fintlabsacr.azurecr.io/spring-boot-template-project:build.${BUILD_NUMBER}_${GIT_COMMIT}
-          name: spring-boot-template-project
+        - image: fintlabsacr.azurecr.io/fint-customer-gateway:build.${BUILD_NUMBER}_${GIT_COMMIT}
+          name: fint-customer-gateway
           resources:
             limits:
               memory: "512Mi"
