--- a/build.gradle
+++ b/build.gradle
@@ -33,20 +33,23 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    implementation 'org.springframework.ldap:spring-ldap-core:2.3.8.RELEASE'
+    implementation 'org.springframework.ldap:spring-ldap-core:2.4.1'
     implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'io.netty:netty-resolver-dns-native-macos:4.1.82.Final:osx-aarch_64'
 
-    implementation 'com.google.guava:guava:30.1-jre'
-    implementation 'org.apache.commons:commons-pool2:2.9.0'
+    implementation 'javax.validation:validation-api'
+    implementation 'org.hibernate.validator:hibernate-validator'
+
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'org.apache.commons:commons-pool2:2.11.1'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'no.fintlabs:fint-kafka:2.3.0'
-    implementation 'no.fintlabs:fint-flyt-kafka:2.0.0'
+//    implementation 'no.fintlabs:fint-flyt-kafka:2.0.0'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
