--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     implementation 'org.springframework.ldap:spring-ldap-core:2.4.1'
+    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
