--- a/src/main/resources/application-local-staging.yaml
+++ b/src/main/resources/application-local-staging.yaml
@@ -1,7 +1,11 @@
 fint:
   org-id: fintlabs.no
+  kafka:
+    default-replicas: 1
+
 spring:
   kafka:
     bootstrap-servers: localhost:9092
+
 server:
   port: 8082
