--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,9 @@ dependencies {
 
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
-    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.apache.commons:commons-collections4:4.3'
+
+
     implementation 'io.netty:netty-resolver-dns-native-macos:4.1.82.Final:osx-aarch_64'
 
     implementation 'javax.validation:validation-api'
