Fixed deployment we hope 🙈

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -65,5 +65,5 @@ jobs:
           manifests: ${{ steps.bake-alpha.outputs.manifestsBundle }}
           images: |
             ${{ steps.meta.outputs.tags }}
-          namespace: operators
+          namespace: flais-io
           action: deploy
