--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,28 +6,17 @@ fint:
       org-id: ${fint.org-id}
       domain-context: flais
     application-id: ${fint.application-id}
+
 spring:
   kafka:
     consumer:
       group-id: ${fint.application-id}
-
   jackson:
     default-property-inclusion: non_null
 
-  datasource:
-    url: ${fint.database.url}
-    username: ${fint.database.username}
-    password: ${fint.database.password}
-  jpa:
-    properties:
-      hibernate:
-        jdbc:
-          lob:
-            non_contextual_creation: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        enable_lazy_load_no_trans: true
-    hibernate:
-      ddl-auto: update
+  profiles:
+    include:
+      - db
 
 logging:
   level:
