--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -1,12 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - service.yaml
-  - deployment.yaml
-  - onepassword.yaml
-  - namespace.yaml
-  - kafka.yaml
-  - pg-database-and-user.yaml
+  - flais.yaml
 commonLabels:
   app.kubernetes.io/name: fint-customer-objects-gateway
   app.kubernetes.io/instance: fint-customer-objects-gateway
