--- a/kustomize/overlays/api/kustomization.yaml
+++ b/kustomize/overlays/api/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
 patches:
   - patch: |-
       - op: replace
-        path: "/spec/itemPath"
+        path: "/spec/onePassword/itemPath"
         value: "vaults/aks-api-vault/items/fint-customer-objects-gateway"
     target:
-      kind: OnePasswordItem
+      kind: Application
       name: fint-customer-objects-gateway
