--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -54,6 +54,10 @@ jobs:
           kustomizationPath: 'kustomize/overlays/alpha'
         id: bake-alpha
 
+      - uses: azure/login@v1
+        with:
+          creds: '${{ secrets.AKS_ALPHA_FINT_GITHUB }}'
+
       - uses: azure/use-kubelogin@v1.1
         with:
           kubelogin-version: 'v0.0.26'
@@ -82,6 +86,10 @@ jobs:
 #          renderEngine: 'kustomize'
 #          kustomizationPath: 'kustomize/overlays/api'
 #        id: bake-api
+#
+#      - uses: azure/login@v1
+#        with:
+#          creds: '${{ secrets.AKS_API_FINT_GITHUB }}'
 #
 #      - uses: azure/use-kubelogin@v1.1
 #        with:
