WIP | Fixing operator issues

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,11 +16,11 @@ spring:
 
   profiles:
     include:
-      - db
+      - local-staging
 
 logging:
   level:
-    org.apache.kafka: OFF
-    no.fintlabs.kafka: OFF
-    org.springframework.kafka: OFF
+    org.apache.kafka: WARN
+    no.fintlabs.kafka: WARN
+    org.springframework.kafka: WARN
     no.fintlabs: DEBUG
