--- a/src/main/resources/application-db.yaml
+++ b/src/main/resources/application-db.yaml
@@ -9,7 +9,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         enable_lazy_load_no_trans: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
   datasource:
     driver-class-name: org.postgresql.Driver
     username: ${fint.database.username}
