feat(nam-oauth): Use different url for authentication and idp api access

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -16,6 +16,7 @@ fint:
     access:
       template-base: "ou=access,o=fint-test"
   nam:
+    idp-hostname: "dummy"
     oauth:
       username: "dummy"
       password: "dummy"
